--- a/Betotrans/Betotrans.csproj
+++ b/Betotrans/Betotrans.csproj
@@ -316,6 +316,18 @@
     <Content Include="Images\referencje\hata_plus .png" />
     <Content Include="Images\referencje\KAMPOL.jpg" />
     <Content Include="Images\referencje\lasy_panstwowe_nadlesnictwo_radziwillow.jpg" />
+    <Content Include="Images\referencje\papierowe\mini\referencja_gmina_jezow.jpg" />
+    <Content Include="Images\referencje\papierowe\mini\referencja_gmina_puszcza_marianska.jpg" />
+    <Content Include="Images\referencje\papierowe\mini\referencja_gmina_puszcza_marianska_2.jpg" />
+    <Content Include="Images\referencje\papierowe\mini\referencja_inn-bud.jpg" />
+    <Content Include="Images\referencje\papierowe\mini\referencja_nadlesnictwo_radziwillow.jpg" />
+    <Content Include="Images\referencje\papierowe\mini\referencja_puszcza_marianska_1.jpg" />
+    <Content Include="Images\referencje\papierowe\referencja_gmina_jezow.jpg" />
+    <Content Include="Images\referencje\papierowe\referencja_gmina_puszcza_marianska.jpg" />
+    <Content Include="Images\referencje\papierowe\referencja_gmina_puszcza_marianska_2.jpg" />
+    <Content Include="Images\referencje\papierowe\referencja_inn-bud.jpg" />
+    <Content Include="Images\referencje\papierowe\referencja_nadlesnictwo_radziwillow.jpg" />
+    <Content Include="Images\referencje\papierowe\referencja_puszcza_marianska_1.jpg" />
     <Content Include="Images\referencje\Powiatowy_Zarzad_Drog_w_Zyrardowie.png" />
     <Content Include="Images\spacer.gif" />
     <Content Include="Images\stopka.jpg" />
