--- a/Betotrans/Betotrans.csproj
+++ b/Betotrans/Betotrans.csproj
@@ -141,7 +141,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AggregateViewModel.cs" />
+    <Compile Include="Models\KruszywoViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -375,7 +375,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Reference.cshtml" />
-    <Content Include="Views\Home\Aggregate.cshtml" />
+    <Content Include="Views\Home\Kruszywo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
