--- a/Betotrans/Web.config
+++ b/Betotrans/Web.config
@@ -5,11 +5,12 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Betotrans-20130111085901;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Betotrans-20130111085901.mdf" providerName="System.Data.SqlClient" />
+    <add name="BetotransDbEntities" connectionString="metadata=res://*/BetotransModel.csdl|res://*/BetotransModel.ssdl|res://*/BetotransModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;data source=|DataDirectory|\BetotransDb.sdf&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
